public/stylesheets/bits.css
html, body {
  overflow-x: hidden;
  padding: 0;
  margin: 0;
  color: #090d1e; }

* {
  margin: 0;
  padding: 0; }

html, body, #wrap {
  height: 100%; }

body > #wrap {
  height: auto;
  min-height: 100%; }

#main {
  padding-bottom: 150px; }

/* must be same height as the footer */
.clearfix:after {
  content: ".";
  display: block;
  height: 0;
  clear: both;
  visibility: hidden; }

.clearfix {
  display: inline-block; }

/* Hides from IE-mac \*/
* html .clearfix {
  height: 1%; }

.clearfix {
  display: block; }

.section {
  width: 50%;
  margin: 0 auto; }

.logo-img {
  width: 375px;
  margin: 0;
  padding: 0;
  float: left; }

h1, h2, h3, h4, h5, h6 {
  color: #273886;
  font-family: Advent, Helvetica, Arial, sans-serif; }

a {
  cursor: pointer; }

.browser-bar {
  position: relative;
  background: #273886;
  border-top: 5px solid #7884b4;
  border-bottom: 5px solid #7884b4;
  color: #eaebf3;
  height: 40px;
  padding: 10px 0;
  box-shadow: 0 2px 10px 3px #444;
  z-index: 1056; }

.navbar-inner {
  background-image: none;
  background-color: transparent;
  border: none; }

.navbar .nav > li > a {
  color: #eaebf3; }

.navbar .nav > li > a:hover {
  color: #dce0e6; }

@font-face {
  font-family: Advent;
  src: url(../fonts/advent_regular.ttf); }

.top-gap {
  margin-top: 15px; }

.top-gap-l {
  margin-top: 30px; }

.navbar .brand {
  font-size: 2.0em;
  color: #eaebf3; }

.nav {
  style: none;
  margin-top: 15px;
  margin-left: 15px;
  font-family: Advent, Helvetica, Arial, sans-serif; }

.nav li {
  display: inline;
  padding-right: 12px;
  padding-left: 12px;
  font-size: 1.5em; }

.nav li:hover {
  border-bottom: solid 5px #7884b4; }

.nav li.current {
  border-bottom: solid 5px #eaebf3; }

.icon {
  font-size: 1.4em; }

#footer {
  position: relative;
  background: #273886;
  border-top: 5px solid #7884b4;
  color: #eaebf3;
  /*width: 50%;*/
  height: 70px;
  padding: 15px 0;
  margin-top: -105px;
  /* negative value of footer height */
  clear: both;
  padding-left: 20px; }

#footer:before, #footer:after {
  content: "";
  position: absolute;
  background: #273886;
  border-top: 5px solid #7884b4;
  top: 0;
  bottom: 0;
  width: 9999px;
  /* some huge width */
  height: 100px;
  margin-top: -5px;
  padding: 15px 0; }

#footer:before {
  right: 100%;
  padding: 15px 0; }

#footer:after {
  left: 100%;
  padding: 15px 0; }

.footer-font {
  color: #eaebf3; }

